--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -836,6 +836,10 @@
                     <v:NameHighlightedTextBlock Text="{Binding}" VerticalAlignment="Center"/>
                   </DataTemplate>
 
+                  <DataTemplate DataType="vm:CommitMessageRecord">
+                    <TextBlock Text="{Binding Subject}" VerticalAlignment="Center" TextTrimming="CharacterEllipsis"/>
+                  </DataTemplate>
+
                   <DataTemplate DataType="vm:FilterModeInGraph">
                     <v:FilterModeInGraph/>
                   </DataTemplate>
