refactor: use `DataGrid` instead of `ListBox` displaying history commits
Sometimes, `Grid.IsSharedSizeScope` does not work when navigating to the first commit

Signed-off-by: leo <longshuang@msn.cn>

--- a/src/App.axaml
+++ b/src/App.axaml
@@ -28,6 +28,7 @@
 
   <Application.Styles>
     <FluentTheme />
+    <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
     <StyleInclude Source="avares://AvaloniaEdit/Themes/Fluent/AvaloniaEdit.xaml" />
     <StyleInclude Source="/Resources/Styles.axaml"/>
   </Application.Styles>
