enhance: auto-scroll to selected commit
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -40,6 +40,7 @@
                 RowHeight="26"
                 HorizontalScrollBarVisibility="Disabled"
                 VerticalScrollBarVisibility="Auto"
+                Loaded="OnCommitListLoaded"
                 LayoutUpdated="OnCommitListLayoutUpdated"
                 SelectionChanged="OnCommitListSelectionChanged"
                 ContextRequested="OnCommitListContextRequested"
