fix: `OnCommitListKeyDown` not triggered when pressing `Ctrl+C`
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -36,6 +36,7 @@
                 IsReadOnly="True"
                 HeadersVisibility="Column"
                 ColumnHeaderHeight="24"
+                ClipboardCopyMode="None"
                 Focusable="False"
                 RowHeight="26"
                 HorizontalScrollBarVisibility="Disabled"
