--- a/src/Views/FileHistories.axaml
+++ b/src/Views/FileHistories.axaml
@@ -13,7 +13,7 @@
                     Icon="/App.ico"
                     Title="{DynamicResource Text.FileHistory}"
                     MinWidth="1280" MinHeight="720">
-  <Grid RowDefinitions="Auto,*">
+  <Grid RowDefinitions="Auto,28,1,*">
     <!-- TitleBar -->
     <Grid Grid.Row="0" Height="28" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
       <!-- Bottom border -->
@@ -37,8 +37,17 @@
       <v:CaptionButtons HorizontalAlignment="Right" IsVisible="{OnPlatform True, macOS=False}"/>
     </Grid>
 
+    <!-- Info -->
+    <Grid Grid.Row="1" ColumnDefinitions="Auto,*" Background="{DynamicResource Brush.Popup}">
+      <Path Grid.Column="0" Width="14" Height="14" Margin="8,0,6,0" Data="{StaticResource Icons.File}"/>
+      <TextBlock Grid.Column="1" Text="{Binding Title, Mode=OneWay}"/>
+    </Grid>
+
+    <!-- Line -->
+    <Rectangle Grid.Row="2" Height="0.8" HorizontalAlignment="Stretch" VerticalAlignment="Top" Fill="{DynamicResource Brush.Border0}"/>
+
     <!-- Body -->
-    <Grid Grid.Row="1">
+    <Grid Grid.Row="3">
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="300" MinWidth="300" MaxWidth="600"/>
         <ColumnDefinition Width="4"/>
